# sample-c

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  Vagrantfile  main.c
.devcontainer/: Dockerfile  devcontainer.json
docs/: git_flow.md  git_flow_fr.md
